2006-10-20  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: Don't remove gettext-tools/libgettextpo/gnulib-m4.
	Move the "-I gnulib-m4" to the end of the aclocal command lines.
	Also add "-I libgettextpo/gnulib-m4".

2006-10-16  Bruno Haible  <bruno@clisp.org>

	* autogen.sh (GNULIB_MODULES_FOR_LIBGETTEXTPO): New variable.
	Invoke gnulib-tool also for libgettextpo.

2006-10-16  Bruno Haible  <bruno@clisp.org>

	* autogen.sh (GNULIB_MODULES_FOR_SRC): Add xstriconv.

2006-10-07  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (distcheck-hook): New rule.

2006-10-02  Bruno Haible  <bruno@clisp.org>

	* version.sh: Bump version number to 0.15.1.

2006-10-02  Bruno Haible  <bruno@clisp.org>

	* build-aux/config.sub: Update to GNU version 2006-09-20.

2006-10-01  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Mention intldir.m4.

2006-09-18  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Remove inttypes-h.m4.

2006-09-11  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Mention intl.m4.

2006-09-06  Bruno Haible  <bruno@clisp.org>

	* autogen.sh (GNULIB_MODULES_FOR_SRC): Add xstriconv, remove
	iconvstring.

2006-08-26  Bruno Haible  <bruno@clisp.org>

	* m4/woe32-dll.m4: Update comments.

2006-08-28  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Remove signed.m4.

2006-08-23  Bruno Haible  <bruno@clisp.org>

	* INSTALL: Recommend to pass variables as configure arguments.
	Suggested by Ralf Wildenhues.

2006-08-08  Bruno Haible  <bruno@clisp.org>

	* INSTALL: Add a recommendation for Tru64.
	Reported by Gary V. Vaughan <gary@gnu.org>.

2006-08-04  Bruno Haible  <bruno@clisp.org>

	* README.woe32: Recommend to use cygwin as development environment,
	and mingw only as target environment. Needed to avoid libtool problems
	reported by Matthew McGillis <matthew@jenika.com>.

2006-07-31  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: Invoke gnulib-tool inside gettext-runtime directory.
	Append gettext-runtime/gnulib-m4 to the macro search path; remove