@@ -1,3 +1,8 @@
+2006-10-23  Bruno Haible  <bruno@clisp.org>
+
+	* m4/fixautomake.m4 (FIX_MAKEFILE_TOPDIR_DISTRIB): Make it work with
+	automake-1.10 too.
+
 2006-10-20  Bruno Haible  <bruno@clisp.org>
 
 	* autogen.sh: Don't remove gettext-tools/libgettextpo/gnulib-m4.
